# dd-sensitive-data-scanner

./: .gitignore  AGENTS.md  LICENSE  LICENSE-3rdparty.csv  Makefile  NOTICE  README.md  license-tool.toml  rust-toolchain.toml
.github/: CODEOWNERS
.github/workflows/: deploy-docs.yml  publish-crate.yml  test.yml  test_gh.yml  trigger_pr.yml
scripts/: generate_license_3rdparty.sh  rust_checks.sh
sds/: Cargo.toml  LICENSE-3rdparty.csv  index.html
sds-bindings-utils/: Cargo.toml
sds-bindings-utils/src/: binary_encoding.rs  lib.rs
sds-go/: test_validation_fix.go
sds-go/go/: build.go  dd_sds.h  go.mod  jwt_claims_validator.go  jwt_claims_validator_test.go  regex.go  regex_rule.go  regex_test.go  rule.go  scanner.go  scanner_test.go  staticcheck.conf  validation.go  validation_test.go
sds-go/go/example/: go.mod  go.sum  main.go
sds-go/rust/: Cargo.toml
sds-go/rust/src/: lib.rs
sds-go/rust/src/native/: create_scanner.rs  delete_scanner.rs  mod.rs  regex.rs  rule.rs  scan.rs  validation.rs
sds/benches/: bench.rs  merged_dfa.rs  multithreaded_scanning.rs
sds/data/: sample_logs.txt  simple_patterns.txt
sds/data/test_standard_rules/: credit_card.yaml  hello_world.yaml
sds/data/test_standard_rules/nested/: test.yaml
sds/src/: ast_utils.rs  bindings_utils.rs  encoding.rs  event.rs  event_json.rs  lib.rs  match_action.rs  path.rs  proximity_keywords.rs  rule.rs  rule_match.rs  scoped_ruleset.rs  secondary_validation.rs  simple_event.rs  stats.rs  str_utils.rs  tokio.rs  validation.rs
sds/src/faker/: ast_preprocess.rs  mod.rs  regex.rs  stateless.rs  template.rs
sds/src/match_validation/: aws_validator.rs  config.rs  config_v2.rs  helpers.rs  http_validator.rs  http_validator_v2.rs  match_status.rs  match_validator.rs  mod.rs  validator_utils.rs
sds/src/native/: create_scanner.rs  delete_scanner.rs  mod.rs  rule.rs  scan.rs  validation.rs
sds/src/normalization/: mod.rs  rust_regex_adapter.rs  test.rs
sds/src/observability/: labels.rs  mod.rs
sds/src/parser/: ast.rs  error.rs  explainer.rs  input.rs  mod.rs  regex_parser.rs  unicode_property_names.rs
sds/src/proximity_keywords/: excluded_keywords.rs  included_keywords.rs  mod.rs
sds/src/scanner/: async.rs  cache_pool.rs  config.rs  debug_scan.rs  error.rs  internal_rule_match_set.rs  merged_dfa.rs  metrics.rs  mod.rs  regex_rule.rs  rule_cache.rs  scope.rs  shared_data.rs  shared_pool.rs  suppression.rs
sds/src/scanner/regex_rule/: compiled.rs  config.rs  mod.rs  regex_cache_store.rs  regex_store.rs
sds/src/scanner/test/: async_rule.rs  included_keywords.rs  match_grouping.rs  match_validation.rs  merged_dfa.rs  metrics.rs  mod.rs  overlapping_matches.rs  parallel_scan.rs  supporting_rule.rs  validators.rs
sds/src/scanner/vectorscan/: mod.rs  tests.rs
sds/src/scoped_ruleset/: bool_set.rs  mod.rs
sds/src/secondary_validation/: aba_rtn_checksum.rs  atlassian_token_checksum.rs  australian_medicare_checksum.rs  australian_tfn_checksum.rs  austrian_ssn_checksum.rs  base58.rs  belgium_national_register_checksum.rs  brazilian_cnpj_checksum.rs  brazilian_cpf_checksum.rs  btc_checksum.rs  bulgarian_egn_checksum.rs  chinese_id_checksum.rs  coordination_number_checksum.rs  czech_pin_checksum.rs  czech_tin_checksum.rs  dutch_bsn_checksum.rs  dutch_passport_checksum.rs  entropy.rs  estonia_personal_code_checksum.rs  ethereum_checksum.rs  finnish_hetu_checksum.rs  france_nif_checksum.rs  france_ssn_checksum.rs  german_ids_checksum.rs  german_passport_checksum.rs  german_svnr_checksum.rs  github_token_checksum.rs  greece_amka_checksum.rs  greece_tin_checksum.rs  hungarian_tin_checksum.rs  iban_checker.rs  irish_pps_checksum.rs  iso_7064_checksum.rs  italian_national_id_checksum.rs  jwt_claims_checker.rs  jwt_claims_validator.rs  jwt_expiration_checker.rs  latvia_national_id_checksum.rs  lithuanian_personal_identification_number_checksum.rs  luhn_checksum.rs  (+25 more)
sds/src/standard_rules/: mod.rs
sds/src/standard_scanners/: mod.rs
sds/tests/: integration_test.rs
sds/tools/fuzz/: Cargo.toml  README.md  split_input.sh
sds/tools/fuzz/in/: test1.txt
sds/tools/fuzz/src/: main.rs
