[package]
name = "dd-sds"
version = "0.1.2"
edition = "2021"
publish = false
license = "Apache-2.0"

[workspace]
members = ["tools/fuzz"]

[features]
default = ["dep:aws-sign-v4", "dep:rayon", "dep:reqwest"]
testing = ["dep:aws-sign-v4", "dep:rayon", "dep:reqwest"]

# Depreacted - Support hash from UTF-16 encoded bytes for backward compatibility. Users should use instead standalone hash match action
utf16_hash_match_action = []
bench = []
match_validation = []

[dependencies]
ahash = "0.8.7"
# Overriding with fix repo due to: https://github.com/seiflotfy/rust-farmhash/pull/16
farmhash = { git = "https://github.com/fuchsnj/rust-farmhash", rev = "82d80b689d65fbd378b13deff10cdd07794df64e" }
nom = "7.1.3"
regex = "1.9.5"
regex-automata = "0.4.7"
# Switch over to the original repo when this issue is resolved: https://github.com/rust-lang/regex/issues/1241
regex-automata-fork = { git = "https://github.com/fbryden/regex", rev = "6952250af962ca3e364da47382b16dba9c703431", package = "regex-automata" }
regex-syntax = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.6.1"
thiserror = "1.0.58"
metrics = "0.24.0"
metrics-util = "0.18.0"
crc32fast = "1.4.0"
base62 = "2.0.2"
iban_validate = "4"
async-trait = "0.1.82"
num_cpus = "1.16.0"

# This is deprecated and may switch to `serde_yml` in the future. Waiting for it to mature a bit first.
serde_yaml = "0.9.34"
lazy_static = "1.5.0"
chrono = { version = "0.4", features = ["serde"] }
slotmap = "1.0.7"
base64 = "0.22.1"
serde_json = "1.0.114"
getrandom = { version = "0.2", features = ["js"] }

# Dependencies used for non-WASM
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
aws-sign-v4 = { version = "0.3.0", optional = true }
rayon = { version = "1.10.0", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "charset", "http2", "macos-system-configuration", "rustls-tls-native-roots"], optional = true }


[dev-dependencies]
rand = "0.8.5"
regex_generate = "0.2.3"
criterion = { version = "0.5.1", features = ["html_reports"] }
luhn = "1.0.1"
serde_json = "1.0.114"
serde_test = "1.0.176"
httpmock = "0.7.0"
dd-sds = { path = ".", features = ["bench"] }
threadpool = "1.8.1"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "multithreaded_scanning"
harness = false
