[package]
name = "dd-sds"
version = "0.1.2"
edition = "2021"
publish = false
license = "Apache-2.0"

[workspace]
members = ["tools/fuzz"]

[features]
default = []
testing = []

# Deprecated - Support hash from UTF-16 encoded bytes for backward compatibility. Users should use instead standalone hash match action
utf16_hash_match_action = []
bench = []
match_validation = []

[dependencies]
ahash = "0.8.7"
# Overriding with fix repo due to: https://github.com/seiflotfy/rust-farmhash/pull/16
farmhash = { git = "https://github.com/fuchsnj/rust-farmhash", rev = "82d80b689d65fbd378b13deff10cdd07794df64e" }
nom = "7.1.3"
regex = "1.9.5"
regex-automata = "0.4.7"
# Switch over to the original repo when this issue is resolved: https://github.com/rust-lang/regex/issues/1241
regex-automata-fork = { git = "https://github.com/fbryden/regex", rev = "6952250af962ca3e364da47382b16dba9c703431", package = "regex-automata" }
regex-syntax = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.6.1"
strum = { version = "0.25", features = ["derive"] }
thiserror = "1.0.58"
metrics = "0.24.0"
metrics-util = "0.18.0"
crc32fast = "1.4.0"
base62 = "2.0.2"
iban_validate = "4"
num_cpus = "1.16.0"
ethereum-types = "0.12.1"

lazy_static = "1.5.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "charset", "http2", "rustls-tls-native-roots"] }
aws-sign-v4 = "0.3.0"
chrono = { version = "0.4", features = ["serde"] }
slotmap = "1.0.7"
base64 = "0.22.1"
serde_json = "1.0.114"
rayon = "1.10.0"
bitcoin = "0.32.6"
iso_iec_7064 = "0.1.1"
ethaddr = "0.2.2"
monero = "0.21.0"
futures = "0.3.31"
tokio = { version = "1.46.1", features = ["full"] }
moka = { version = "0.12.10", features = ["sync"] }
once_cell = "1.21.3"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
serde_json = "1.0.114"
serde_test = "1.0.176"
httpmock = "0.7.0"
dd-sds = { path = ".", features = ["bench"] }
threadpool = "1.8.1"

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "multithreaded_scanning"
harness = false
