[package]
name = "dd_sds_go"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dd-sds = { path = "../../sds" }
sds-bindings-utils = { path = "../../sds-bindings-utils" }

